Mails-Adresse aktualisiert und Analytics eingebaut.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div id="wrap">
 			<header>
-				<span class="hello">Hallo, </span>ich bin <a href="mailto:mail@aufeinwort.org">Jannik Hoffjann</a>.
+				<span class="hello">Hallo, </span>ich bin <a href="mailto:hallo@jannikhoffjann.de">Jannik Hoffjann</a>.
 			</header>
 
 			<p>Ich bin 20 Jahre alt, lebe in Osnabrück und studiere dort an der Uni Wirtschaftsinformatik.<p/>
@@ -35,11 +35,19 @@
 			<a href="http://aufeinwort.org/impressum">Impressum &amp; Rechtskram</a>
 		</footer>
 
-		<script>
-			/*var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-			(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-			g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-			s.parentNode.insertBefore(g,s)}(document,'script'));*/
+		<script type="text/javascript">
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-36874117-1']);
+		  _gaq.push(['_anonymizeIP']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
 		</script>
 	</body>
 </html>
