mal den optimizer drüberlaufen lassen…

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 		<link rel="stylesheet" href="css/normalize.min.css">
-		<link rel="stylesheet" href="css/boilerplate.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/boilerplate.min.css">
+		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 	<body>
 		<div id="blur"></div>
