some minor changes

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 				<span class="hello">Hallo, </span>ich bin <a href="mailto:hallo@jannikhoffjann.de">Jannik Hoffjann</a>.
 			</header>
 
-			<p>Ich bin 20 Jahre alt, lebe in Osnabrück und studiere dort an der Uni Wirtschaftsinformatik.<p/>
+			<p>Ich bin 21 Jahre alt, lebe in Osnabrück und studiere dort an der Uni Wirtschaftsinformatik.<p/>
 
-			<p>Im Internet kann man mich auch in meinem <a href="http://aufeinwort.org">Blog</a>, sowie bei <a href="https://facebook.com/jhoffjann">Facebook</a>, <a href="https://twitter.com/aufeinwort">Twitter</a>, <a href="http://quote.fm/aufeinwort">Quote.fm</a> und <a href="http://instagram.com/aufeinwort">Instagram</a> finden.
+			<p>Im Internet kann man mich auch in meinem <a href="http://aufeinwort.org">Blog</a>, sowie bei <a href="https://facebook.com/jhoffjann">Facebook</a>, <a href="https://twitter.com/aufeinwort">Twitter</a> und <a href="http://instagram.com/aufeinwort">Instagram</a> finden.
 			</p>
 		</div>
 		<footer>
-			<a href="http://aufeinwort.org/impressum">Impressum &amp; Rechtskram</a>
+			<a href="http://aufeinwort.org/impressum">Impressum</a>
 		</footer>
 
 		<script type="text/javascript">
