--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width; initial-scale=0.75; maximum-scale=1.0;">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/normalize.min.css">
 		<link rel="stylesheet" href="css/boilerplate.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -26,9 +26,9 @@
 				<span class="hello">Hallo, </span>ich bin <a href="mailto:hallo@jannikhoffjann.de">Jannik Hoffjann</a>.
 			</header>
 
-			<p>Ich bin 21 Jahre alt, lebe in Osnabrück und studiere dort an der Uni Wirtschaftsinformatik.<p/>
+			<p>Ich bin 22 Jahre alt, lebe in Osnabrück und studiere dort an der Uni Wirtschaftsinformatik.<p/>
 
-			<p>Im Internet kann man mich auch in meinem <a href="http://aufeinwort.org">Blog</a>, sowie bei <a href="https://facebook.com/jhoffjann">Facebook</a>, <a href="https://twitter.com/aufeinwort">Twitter</a> und <a href="http://instagram.com/aufeinwort">Instagram</a> finden.
+			<p>Im Internet kann man mich auch in meinem <a href="http://aufeinwort.org">Blog</a>, sowie bei <a href="https://facebook.com/jhoffjann">Facebook</a>, <a href="https://github.com/jhoffjann">Github</a>, <a href="https://twitter.com/aufeinwort">Twitter</a> und <a href="http://instagram.com/aufeinwort">Instagram</a> finden.
 			</p>
 		</div>
 		<footer>
