--- a/index.html
+++ b/index.html
@@ -10,44 +10,33 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width; initial-scale=0.75; maximum-scale=1.0;">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/normalize.min.css">
-		<link rel="stylesheet" href="css/boilerplate.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/typeplate.css">
+		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	</head>
 	<body>
 		<div id="blur"></div>
 		<!--[if lt IE 7]>
-			<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-		<![endif]-->
-
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 		<div id="wrap">
 			<header>
-				<span class="hello">Hallo, </span>ich bin <a href="mailto:hallo@jannikhoffjann.de">Jannik Hoffjann</a>.
+				<h1 class="giga hello">Hi!</h2>
+					<h2 class="beta">my name is </h2>
+					<h1 class="alpha"><a href="mailto:hallo@jannikhoffjann.de">Jannik Hoffjann</a>.</h2>
 			</header>
-
-			<p>Ich bin 22 Jahre alt, lebe in Osnabrück und studiere dort an der Uni Wirtschaftsinformatik.<p/>
-
-			<p>Im Internet kann man mich auch in meinem <a href="http://aufeinwort.org">Blog</a>, sowie bei <a href="https://facebook.com/jhoffjann">Facebook</a>, <a href="https://github.com/jhoffjann">Github</a>, <a href="https://twitter.com/aufeinwort">Twitter</a> und <a href="http://instagram.com/aufeinwort">Instagram</a> finden.
-			</p>
+			<h3 class="gamma">I study Information Systems </h3>
+			<h3 class="gamma">at the University of Osnabrück.</h3>
+			<h4 class="delta">Other places where you can find me:</h4>
+			<h4 class="delta"><a href="http://aufeinwort.org">Blog</a>
+			 - <a href="https://facebook.com/jhoffjann">Facebook-Page</a>
+				- <a href="https://github.com/jhoffjann">Github</a>
+				- <a href="https://twitter.com/aufeinwort">Twitter</a></h3>
 		</div>
 		<footer>
 			<a href="http://aufeinwort.org/impressum">Impressum</a>
 		</footer>
-
-		<script type="text/javascript">
-
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-36874117-1']);
-		  _gaq.push(['_anonymizeIP']);
-		  _gaq.push(['_trackPageview']);
-
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-
 		</script>
 	</body>
 </html>
