--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<h3 class="gamma">at the University of Osnabrück.</h3>
 			<h4 class="delta">Other places where you can find me:</h4>
 			<h4 class="delta"><a href="http://aufeinwort.org">Blog</a>
-			 - <a href="https://facebook.com/jhoffjann">Facebook-Page</a>
+			 - <a href="https://facebook.com/jhoffjann">Facebook</a>
 				- <a href="https://github.com/jhoffjann">Github</a>
 				- <a href="https://twitter.com/aufeinwort">Twitter</a></h3>
 		</div>
