--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 			</header>
 			<h3 class="gamma">I study Information Systems</h3>
 			<h3 class="gamma">at the University of M&uuml;nster.</h3>
-			<h4 class="delta">You can also find me at this places</h4>
+			<h4 class="delta">You can also find me at this places:</h4>
 			<h4 class="delta"><a href="http://aufeinwort.org">Blog</a>
 			 - <a href="https://facebook.com/jhoffjann">Facebook</a>
 				- <a href="https://github.com/jhoffjann">Github</a>
 				- <a href="https://twitter.com/aufeinwort">Twitter</a></h4>
-		<footer>
+</div>		
+<footer>
 			<a href="http://aufeinwort.org/impressum">Impressum</a>
 		</footer>
 		</script>
