--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</header>
 			<h3 class="gamma">I study Information Systems</h3>
 			<h3 class="gamma">at the University of M&uuml;nster.</h3>
-			<h4 class="delta">You can also find me at this places:</h4>
+			<h4 class="delta">You can also find me at these places:</h4>
 			<h4 class="delta"><a href="http://aufeinwort.org">Blog</a>
 				- <a href="https://github.com/jhoffjann">Github</a>
 				- <a href="https://twitter.com/aufeinwort">Twitter</a></h4>
